--- a/index.html
+++ b/index.html
@@ -5,15 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Calculator</title>
+    <style>
+        .font {
+            font-family: "Roboto", sans-serif;
+        }
+    </style>
 </head>
 
-<body>
-    <h1 class="text-center font-semibold text-6xl">Calculator</h1>
+<body class=" bg-black font">
+    <h1 class="text-center  font-semibold text-6xl">Calculator</h1>
     <div class=" flex flex-col items-center h-screen mx-auto rounded-3xl">
-        <div class="grid grid-cols-4 gap-4">
+        <div>
+            <input class="input text-4xl py-10 px-2 " type="text">
+        </div>
+        <div class="grid grid-cols-4 gap-4 mt-5">
             <button
-                class="rounded-full text-white text-4xl font-bold bg-[#A4A4A4] w-24  flex items-center justify-center">c</button>
+                class="rounded-full text-white text-4xl font-bold bg-[#A4A4A4] w-24  flex items-center justify-center">C</button>
             <button
                 class="rounded-full text-white text-4xl font-bold bg-[#A4A4A4] w-24 h-24 flex items-center justify-center">DEL</button>
             <button
