added all operations and smooth ui

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     </style>
 </head>
 
-<body class=" bg-black font">
-    <h1 class="text-center  font-semibold text-6xl">Calculator</h1>
-    <div class=" flex flex-col items-center h-screen mx-auto rounded-3xl">
-        <div>
-            <input class="input text-4xl py-10 px-2 " type="text">
+<body class=" font md:bg-[#11CDFE]">
+    <div <!--
+        class=" flex flex-col w-fit bg-black items-center mx-auto rounded-3xl  border-2 py-16 px-5 border-[#D7D0C0]">
+        -->
+        <div class="pt-5">
+            <input class="bg-black rtl text-right  text-white input text-4xl py-14 px-2 border-2 rounded-md "
+                type="text">
         </div>
-        <div class="grid grid-cols-4 gap-4 mt-5">
+        <div class="grid grid-cols-4 gap-4 mt-5 p-5">
             <button
                 class="rounded-full text-white text-4xl font-bold bg-[#A4A4A4] w-24  flex items-center justify-center">C</button>
             <button
