--- a/index.html
+++ b/index.html
@@ -19,54 +19,56 @@
 </head>
 
 <body class=" font md:bg-[#F8FAFC]">
-    <div
-        class=" flex flex-col mt-2  sm:max-w-md md:max-w-lg bg-black items-center mx-auto rounded-3xl  border-2 py-16 px-5 drop-shadow-md  border-[#D7D0C0] w-full">
+    <div class="mx-1 md:mx-0">
+        <div
+            class=" flex justify-center flex-col mt-2  sm:max-w-md md:max-w-lg bg-black items-center mx-auto rounded-3xl  border-2 py-16 px-5 drop-shadow-md  border-[#D7D0C0] w-full">
 
-        <div class="pt-5 ">
-            <input
-                class="bg-black rtl text-right  text-white input text-xl md:text-4xl py-10 md:py-14 px-2 border-2 rounded-md "
-                type="text">
-        </div>
-        <div class="grid grid-cols-4 gap-4 mt-5 p-5">
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#A4A4A4] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center ">C</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#A4A4A4] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">DEL</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#A4A4A4] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">%</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">/</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">7</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">8</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">9</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">*</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">4</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">5</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">6</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">-</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">1</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">2</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">3</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">+</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333]  h-14  md:h-24  pl-11 flex items-center justify-start col-span-2">0</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center ">.</button>
-            <button
-                class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FF9F03] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">=</button>
+            <div class="pt-5 ">
+                <input
+                    class="bg-black rtl text-right  text-white input text-xl md:text-4xl py-10 md:py-14 px-2 border-2 rounded-md "
+                    type="text">
+            </div>
+            <div class="grid grid-cols-4 gap-4 mt-5 p-5 ">
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#A4A4A4] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center ">C</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#A4A4A4] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">DEL</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#A4A4A4] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">%</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">/</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">7</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">8</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">9</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">*</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">4</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">5</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">6</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">-</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">1</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">2</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">3</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FFA20A] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">+</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333]  h-14  md:h-24  pl-11 flex items-center justify-start col-span-2">0</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#333333] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center ">.</button>
+                <button
+                    class="rounded-full text-white text-2xl md:text-4xl font-bold bg-[#FF9F03] w-14 h-14 md:w-24 md:h-24  flex items-center justify-center">=</button>
 
+            </div>
         </div>
     </div>
     <script src="screipt.js"></script>
