--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 
-<body class=" font md:bg-[#F8FAFC]">
+<body class=" font md:bg-[#90A1FF]">
     <div class="mx-1 md:mx-0">
         <div
             class=" flex justify-center flex-col mt-2  sm:max-w-md md:max-w-lg bg-black items-center mx-auto rounded-3xl  border-2 py-16 px-5 drop-shadow-md  border-[#D7D0C0] w-full">
